course info fixed
